# cairog

./: .gitignore  Dockerfile  Makefile  Makefile.am  README.md  cairog.scm  configure.ac  docker-compose.yml  env.sh  guix.scm  pre-inst-env.in  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
cairog/: context.scm  core.scm  surface.scm  types.scm
doc/: api-coverage.texi  cairog.texi  context.texi  core.texi  installation.texi  quick-start.texi  surface.texi  usage.texi
docs/: index.md
docs/reference/: context.md  core.md  coverage.md  surface.md
examples/: circle.scm  lines.scm  pie.scm  rectangles.scm  save-restore.scm
tests/: context-test.scm  core-test.scm  surface-test.scm
